# amazon-freertos-workshop

./: .gitmodules  CMakeLists.txt  README.md  build.sh
amazon-freertos-configs/: aws_demo_config.h  board_gpio.h  iot_ble_config.h  iot_config.h
components/afr-esp32devkitc-bsp/: CMakeLists.txt  component.mk
components/afr-esp32devkitc-bsp/include/: esp32devkitc.h  esp32devkitc_button.h  esp32devkitc_event.h
components/afr-esp32devkitc-bsp/src/: esp32devkitc.c  esp32devkitc_button.c  esp32devkitc_event.c
components/dummy/src/: dummy.c
components/foo/: CMakeLists.txt
components/m5-display/: CMakeLists.txt
components/m5-display/include/: m5_display.h
components/m5-display/src/: m5_display.c
components/m5-display/util/: tftspi.c  tftspi.h
components/m5stickc-display/include/: m5stickc_display.h
components/m5stickc-display/src/: m5stickc_display.c
components/m5stickc-display/util/: tftspi.h
include/: addons.h  device.h  lab0_sleep.h  lab1_aws_iot_button.h  lab2_shadow.h  lab_config.h  lab_connection.h  workshop.h
src/: addons.c  device.c  lab0_sleep.c  lab1_aws_iot_button.c  lab2_shadow.c  lab_connection.c  main.c  workshop.c
